// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/RadioButton Checked 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gyUflj irwfst sc-gkdBiK XzJgE"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 bsbPNu"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-g1f6ld-5 MBaYF"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 kTMaqq"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gZVniw StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bOYFlj"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-g1f6ld-3 ieBzqo"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gyUflj cGeIxV sc-gkdBiK XzJgE"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 bsbPNu"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-g1f6ld-5 MBaYF"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 kTMaqq"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gioviw StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bOYFlj"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gyUflj cGeIxV sc-gkdBiK XzJgE"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 emmNdn"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-g1f6ld-5 MBaYF"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 fUKAsy"
            disabled=""
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gioviw StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bOYFlj"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;
